src/objects/Card_Balance__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Balance__c</fullName>
        <formula>Customer_Account__r.Balance_Account__c</formula>
        <label>Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Close_Data__c</fullName>
        <formula>CreatedDate +  2</formula>
        <label>Close Data</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Customer_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Customer Account</label>
        <referenceTo>Customer_Account__c</referenceTo>
        <relationshipLabel>Cards</relationshipLabel>
        <relationshipName>Cards</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Card</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Card Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>